# TestTaskBackend

./: .gitignore  README.md  dockerfile  main.db  pyproject.toml
alembic/: env.py
alembic/versions/: 290ef8a5da54_initialization.py
src/: config.py  database.py  log.txt  main.py  schemas.py  service.py
src/ads/: models.py  router.py  schemas.py  services.py
src/users/: models.py  router.py  services.py  utils.py
